# uchile_hri

./: .gitignore
bender_ai/: CMakeLists.txt  package.xml  setup.py
bender_ai/src/bender_ai/: AI.py
bender_hri/: CMakeLists.txt  package.xml
bender_nlp/: CMakeLists.txt  README.md  package.xml  setup.py
bender_nlp/config/: verb_list.conf
bender_nlp/install/: download_MBSP.sh  install.sh  install_MBSP.sh
bender_nlp/src/bender_nlp/: bender_nlp.py  tester.py
bender_nlp/src/config/: verb_list.conf
bender_speech/: CMakeLists.txt  README.md  package.xml  setup.py
bender_speech/Grammar/: .gitignore
bender_speech/Grammar/Stage1/: Newgrammar.jsgf  Stage2gpsr.jsgf  gpsr_ii.dic  gpsr_ii.jsgf  gpsr_very_lite.dic  gpsr_very_lite.jsgf
bender_speech/Grammar/Stage1/gpsr/: Stage1gpsr.jsgf  add2dic  gpsr.jsgf  gpsr.lm
bender_speech/Grammar/Stage1/pickandplace/: pickandplace.jsgf
bender_speech/Grammar/Stage1/sradt/: questions.jsgf  sradt.jsgf
bender_speech/Grammar/Stage1/wdys/: wdys.jsgf
bender_speech/Grammar/Stage2/: cocktail_party.jsgf
bender_speech/Grammar/Stage2/WakeMeUp/: wakemedicc.jsgf
bender_speech/Grammar/commands/: follow.jsgf  go_on.jsgf
bender_speech/Grammar/demos/: simple.dic  simple.jsgf
bender_speech/Grammar/general/drinks/: drinks_dic.jsgf  drinks_dic.lm
bender_speech/Grammar/general/names/: name_dic.jsgf
bender_speech/Grammar/general/objects/: objects_dic.jsgf
bender_speech/Grammar/old_grammars/: cleanup.jsgf  cocktail.jsgf  follow.jsgf  move.jsgf  rips.jsgf  test.jsgf
bender_speech/Grammar/restaurant/: confirmation.jsgf  delete.dic  delete.jsgf  goto.dic  goto.jsgf  guide.dic  guide.jsgf  nav.jsgf  operation.dic  operation.jsgf  save.dic  save.jsgf  slam.dic  slam.jsgf  slam2.dic  slam2.jsgf
bender_speech/Grammar/test/: questions.jsgf  test_cocktail.jsgf
bender_speech/Grammar/words/: quest.jsgf
bender_speech/bash/: setup.bash  setup.sh
bender_speech/cfg/: SpeechRecognition.cfg
bender_speech/config/: recognition_params.yaml  recognizer.yaml
bender_speech/config/Sentences/: answers.txt  keywords.txt  questions.txt
bender_speech/include/bender_speech/: AudioSource.h  Recognizer.h  RecognizerROS.h  synthesizer.h
bender_speech/include/bender_speech/macros/: AskQuestion.h  InteractSpeech.h  Sentences.h
bender_speech/install/: download_recognizer.sh  install.bash  install.sh  install_recognizer.sh  install_synthesizer.sh
bender_speech/launch/: ask_question.launch  complete_speech.launch  interaction.launch  launch_microphone.launch  macros_speech.launch  recognizer.launch  sentences.launch  speech.launch  synthesizer.launch
bender_speech/scripts/hwcheck/: mic_check.py
bender_speech/shell/: setup.sh
bender_speech/src/: AudioSource.cpp  Exceptions.cpp  InteractSpeech.py  Recognizer.cpp  RecognizerROS.cpp  recognizer.py  recorder.py  synthesizer.cpp  tester2.py  testmics.py
bender_speech/src/bender_speech/: Interact.py
bender_speech/src/macros/: AskQuestion.cpp  InteractSpeech.cpp  Sentences.cpp
bender_speech/utils/: create_dictionary.bash  create_dictionary.sh  funciones.bash  language_model_generator.bash  launch_microphone.bash  launch_microphone.sh  list_sources.sh
display_interface/: CMakeLists.txt  package.xml
display_interface/launch/: display_interface.launch  display_interface_new_terminal.launch
display_interface/src/display_interface/: keyboard_interface.py
uchile_hri/: CMakeLists.txt  package.xml
uchile_nlp/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
uchile_nlp/config/: verb_list.conf
uchile_nlp/install/: install.sh
uchile_nlp/src/uchile_nlp/: Test.py  readme_notas.txt  tester.py  uchile_nlp.py  uchile_nlp_2018.py
uchile_speech_deepspeech/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
uchile_speech_deepspeech/action/: DoRecognition.action
uchile_speech_deepspeech/install/: install.sh
uchile_speech_deepspeech/launch/: recognizer.launch
uchile_speech_deepspeech/src/: buffermic.py  par_asr.py  recognizer_deepspeech.py  tester.py  vad_sm.py
uchile_speech_pocketsphinx/: CMakeLists.txt
uchile_speech_pocketsphinx/Grammar/Stage1/: continue.dic  continue.fsg  continue.jsgf  continue.word  continue.words
uchile_speech_pocketsphinx/Grammar/Stage1/GPSR/: gpsr_great.jsgf  gpsr_in_working.dic  gpsr_in_working.jsgf  gpsr_robocup.dic  gpsr_robocup.jsgf
uchile_speech_pocketsphinx/Grammar/Stage1/HelpMeCarry/: groceries_location.dic  groceries_location.fsg  groceries_location.jsgf  groceries_location.word  groceries_location.words  startfollow.dic  startfollow.fsg  startfollow.jsgf  startfollow.word  startfollow.words  stopfollow.dic  stopfollow.fsg  stopfollow.jsgf  stopfollow.word  stopfollow.words
uchile_speech_pocketsphinx/Grammar/Stage1/SPR/: questions.dic  questions.fsg  questions.jsgf  questions.word  questions.words
uchile_speech_pocketsphinx/Grammar/Stage1/StoringGroceries/: starttest.dic  starttest.fsg  starttest.jsgf  starttest.word  starttest.words
uchile_speech_pocketsphinx/Grammar/Stage2/Restaurant/: nextorder.dic  nextorder.fsg  nextorder.jsgf  nextorder.word  nextorder.words  order.dic  order.fsg  (+3 more)
uchile_speech_pocketsphinx/Grammar/demos/: follow.dic  follow.jsgf
uchile_speech_pocketsphinx/config/: recognizer.yaml
uchile_speech_pocketsphinx/install/: install.sh
uchile_speech_pocketsphinx/launch/: recognizer.launch
uchile_speech_pocketsphinx/scripts/hwcheck/: mic_check.py
uchile_speech_pocketsphinx/src/: RecognizerROS.cpp  tester2.py
uchile_speech_web/: CMakeLists.txt  README.md  package.xml  setup.py
uchile_speech_web/action/: CalibrateThreshold.action  DoRecognition.action
uchile_speech_web/install/: install.sh
uchile_speech_web/launch/: recognizer.launch
uchile_speech_web/src/: calibrate.py  recognizer_web.py  tester.py
uchile_speech_web_pepper/: CMakeLists.txt  package.xml
uchile_speech_web_pepper/launch/: recognizer.launch
uchile_speech_web_pepper/src/: calibrate.py  notes.txt  recognizer_web.py  recognizer_web_naoqi.py  tester.py
uchile_speech_web_pepper/src/uchile_speech_web/: speech_recognizer.py
