<package>
  <name>bender_ai</name>
  <version>0.0.0</version>
  <description>bender_ai</description>
  <author>Gonzalo Olave</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/bender_ai</url>
  <maintainer email="gonzalo@todo.todo">gonzalo</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

   <buildtool_depend>catkin</buildtool_depend>
  <build_depend>bender_msgs</build_depend>
  <build_depend>bender_srvs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>bender_utils</build_depend>
  
  <run_depend>bender_utils</run_depend>
  <run_depend>bender_msgs</run_depend>
  <run_depend>bender_srvs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>

</package>


