<?xml version="1.0"?>
<package format="2">
    <!-- 
      <depend>             : build, export, and execution dependencies 
      <build_depend>       : pkgs needed at compile time (any file or library)
      <build_export_depend>: pkgs needed to build libraries against this pkg
      <exec_depend>        : pkgs needed to run this code. (e.g: shared libs)
      <test_depend>        : only additional deps for unit testing (e.g: gtest)
      <doc_depend>         : dependencies for documentation generation

      See also:
      - http://wiki.ros.org/catkin/package.xml
      - http://www.ros.org/reps/rep-0140.html
    -->


    <!-- PACKAGE INFORMATION -->
    <!-- - - - - - - - - - - -->

    <name>uchile_speech_deepspeech</name>
    <version>1.0.0</version>
    <description>uchile_speech_deepspeech package</description>


    <!-- team -->
    <maintainer email="bender.devel@gmail.com">
      Bender Team - UChile Homebreakers</maintainer>
    <author     email="bender.devel@gmail.com">
      Bender Team - UChile Homebreakers</author>

    <!-- specific developers -->
    <author email="javier.urrutia.r@ug.uchile.cl">Javier Urrutia</author> 
    <maintainer email="javier.urrutia.r@ug.uchile.cl">Javier Urrutia</maintainer>

    
    <!-- about bender and related repository -->
    <url type="website">http://robotica-uchile.amtc.cl/bender-index.html</url>

    <license>TODO</license>


    <!-- SYSTEM DEPENDENCIES -->
    <!-- - - - - - - - - - - -->

    <!--  build system tool to build this package -->
    <buildtool_depend>catkin</buildtool_depend>
    
    <!-- common ROS depends -->
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>actionlib</depend>
    <depend>actionlib_msgs</depend>

    <!-- messages -->
    <build_depend>message_generation</build_depend>

    <exec_depend>message_runtime</exec_depend>


    <export>
    </export>
  
</package>
